--- a/pokemon.tex
+++ b/pokemon.tex
@@ -26,7 +26,7 @@
 回復技は回復率 $r\in[0,1]$ というパラメータを持つ．回復技を使うとそのポケモンは自身の最大体力の $r$ 倍の体力を回復する．
 
 \section{形式化}
-正整数 $n$，正実数 $\alpha,\beta$，集合 $T$，$e\colon T \times T \to \mathbb{R_{\ge 0}}$ を固定する．
+正整数 $n$，正実数 $\alpha,\beta$，集合 $T$，$e\colon T \times T \to \mathbb{R}_{\ge 0}$ を固定する．
 $n$ はバトルにおいて各プレイヤーが何体のポケモンを持つかを表し，$\alpha,\beta$ はダメージの計算に使う定数である．
 集合 $T$ の要素はタイプと呼ばれ，$e$ はタイプ相性関数と呼ばれる．
 \begin{definition}
